<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Red_801"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/back_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/center_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tongji"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/right_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/fenbu"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="最近一周"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/grass_green"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="最近一月"
            android:textColor="@color/white" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <com.cspaying.shanfu.ui.view.XListView
        android:id="@+id/techan_xListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="@color/light_grey" >
    </com.cspaying.shanfu.ui.view.XListView>

</LinearLayout>